--- a/ME5401_report/ME5401.tex
+++ b/ME5401_report/ME5401.tex
@@ -987,7 +987,7 @@
 		\label{fig22}
 	\end{figure}
 	
-	However, the state feedback controller can't ensure the internal stability. To investigate it, we utilize the state observer to check the six state responses after given a step signal in the first channel. The response curve is given in Fig~\ref{fig23}, where the second and fifth states are unstable by the decoupling controller and the system is only BIBO stable but not internally stable.
+	However, the state feedback controller can't ensure the internal stability. To investigate it, we utilize the state observer to check the six state responses after given a step signal in the first channel. The response curve is given in Fig~\ref{fig23}, where the second and fifth states are unstable by the decoupling controller and the system is only BIBO stable but not internally stable. The poles of the system is also checked and one has positive real part (2.4821), which results in the instability.
 	
 	 \begin{figure}[H]
 	 	\centering
